# erc8004-search

./: Cargo.toml  README.md
erc8004-search/: Cargo.toml
erc8004-search/examples/: search.rs  search_filters.rs
erc8004-search/src/: client.rs  error.rs  lib.rs  types.rs
